# gui-agent-screenshot-tools

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/gui_agent_screenshot_tools/: __init__.py  bbox.py  coordinate.py  resize.py  screenshot.py  space.py  types.py
tests/: conftest.py  test_bbox.py  test_coordinate.py  test_integration.py  test_resize.py  test_screenshot.py  test_space.py
